# cookiecutter-computer-vision

./: .gitignore  README.md  ccds.json  cookiecutter.json  pytest.ini  requirements.txt
.github/: dependabot.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .dvcignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  noxfile.py  params.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  test_environment.py  {% if cookiecutter.open_source_license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.open_source_license == 'BSD-3' -%} LICENSE {%- endif %}  {% if cookiecutter.open_source_license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.open_source_license == 'MIT' -%} LICENSE {%- endif %}  {{ cookiecutter.repo_name }}.yml
{{ cookiecutter.repo_name }}/.github/: dependabot.yml
{{ cookiecutter.repo_name }}/src/data/: __init__.py  make_dataset.py  make_dataset_test.py  split_images.sh  tfdata.py
{{ cookiecutter.repo_name }}/src/data/mapfile/: __init__.py  create.py  split.py  split_train_dev.py
{{ cookiecutter.repo_name }}/src/features/: build_features_test.py
{{ cookiecutter.repo_name }}/src/hpc/: create_slurm_job.py
{{ cookiecutter.repo_name }}/src/img/: __init__.py  augment.py  compute_mean.py  tfreader.py  tfreader_test.py  transforms.py
{{ cookiecutter.repo_name }}/src/img/morphology/: __init__.py  bwareaopen.py  bwlabel_pair.py
{{ cookiecutter.repo_name }}/src/img/segmentation/: __init__.py  filters.py  threshold.py  watershed.py
{{ cookiecutter.repo_name }}/src/models/: blocks.py  networks.py  predict_model.py  predict_model_test.py  test_train_model.py  train_callbacks.py  train_model.py  train_model_test.py
{{ cookiecutter.repo_name }}/src/models/networks/: __init__.py  blocks.py  resnet20.py  resnet20_sngp.py  resnet20_test.py  resnet50_batchensemble.py  resnet50_deterministic.py  resnet50_dropout.py  resnet50_het_mimo.py  resnet50_het_mimo_test.py  resnet50_het_rank1.py  resnet50_het_rank1_test.py  resnet50_heteroscedastic.py  resnet50_hetsngp.py  resnet50_hetsngp_test.py  resnet50_mimo.py  resnet50_mimo_test.py  resnet50_radial.py  resnet50_rank1.py  resnet50_sngp.py  resnet50_sngp_be.py  resnet50_torch.py  resnet50_variational.py  simple_nn.py  unet.py  unet_xception.py  wide_resnet.py  wide_resnet_batchensemble.py  wide_resnet_batchensemble_test.py  wide_resnet_condconv.py  wide_resnet_condconv_test.py  wide_resnet_dropout.py  wide_resnet_dropout_test.py  wide_resnet_heteroscedastic.py  wide_resnet_hetsngp.py  wide_resnet_hetsngp_test.py  wide_resnet_hyperbatchensemble.py  wide_resnet_hyperbatchensemble_test.py  wide_resnet_mimo.py  wide_resnet_mimo_test.py  (+9 more)
{{ cookiecutter.repo_name }}/src/models/train/: __init__.py  callbacks.py  fit.py
{{ cookiecutter.repo_name }}/src/tests/: test_build_features.py  test_compute_mean.py  test_make_dataset.py  test_mapfile.py  test_predict_model.py  test_tfreader.py  test_train_model.py  test_transforms.py  test_unet.py  test_visualize.py
{{ cookiecutter.repo_name }}/src/visualization/: visualize_test.py
{{ cookiecutter.repo_name }}/tests/data/: test_mapfile.py
{{ cookiecutter.repo_name }}/tests/features/: test_build_features.py
{{ cookiecutter.repo_name }}/tests/img/: test_compute_mean.py
{{ cookiecutter.repo_name }}/tests/models/: test_predict_model.py
{{ cookiecutter.repo_name }}/tests/models/networks/: test_resnet20.py  test_resnet50_het_mimo.py  test_resnet50_het_rank1.py  test_resnet50_mimo.py  test_resnet50_sngp.py  test_resnet50_variational.py  test_unet.py  test_wide_resnet_batchensemble.py  test_wide_resnet_hetsngp.py  test_wide_resnet_hyperbatchensemble.py
